fix last message time dispear

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
           </div>
         </div>
       </ion-content>
-      <div class="bar bar-footer bar-positive item-input-inset">
+      <ion-footer-bar class="bar bar-footer bar-positive item-input-inset">
         <label class="item-input-wrapper">
           <input type="search" placeholder="Message" ng-model="newtext">
         </label>
         <button class="button button-clear" ng-click="addMessage(newtext)">
           Send
         </button>
-      </div>
+      </ion-footer-bar>
     </ion-pane>
   </body>
 </html>
